REGRESSION(r133214): Don't invalidate style when adding classes that don't match rules https://bugs.webkit.org/show_bug.cgi?id=126177

Reviewed by Anders Carlsson.

Spotted by Elliott Sprehn in Chromium.

* dom/Element.cpp:
(WebCore::checkSelectorForClassChange):

    Remove unnecessary templating.

(WebCore::Element::classAttributeChanged):

    Fix logic error with 'continue'.



Canonical link: https://commits.webkit.org/145705@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162843 268f45cc-cd09-0410-ab3c-d52691b4dbfc